Improving POE/PCE